<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EdicionDiaActivity">

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tvFecha" />

    <Button
        android:id="@+id/btFecha"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/tvFecha"
        app:layout_constraintStart_toEndOf="@+id/tvFecha"
        app:layout_constraintTop_toTopOf="@+id/tvFecha"
        app:layout_constraintVertical_bias="0.322" />

    <EditText
        android:id="@+id/etResumen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/etResumen"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btFecha"
        app:layout_constraintTop_toTopOf="@+id/btFecha" />

    <Spinner
        android:id="@+id/spValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvValoracion"
        app:layout_constraintStart_toEndOf="@+id/tvValoracion"
        app:layout_constraintTop_toTopOf="@+id/tvValoracion" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spValoracion"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etContenido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|end"
                android:hint="@string/etContenido"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvValoracion"
        app:layout_constraintStart_toStartOf="@+id/tvFecha"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>